--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/modal.css" />
-    <link rel="stylesheet" href="./scss/style.scss" />
+    <link rel="stylesheet" href="./scss/styles.css" />
     <link rel="stylesheet" href="./css/form.css" />
   </head>
   <body>
     <header>
-      <div class="container navigation">
+      <div class="container navigation ">
         <nav>
-          <div class="logo-header">
+          <div class="logo header">
             <a href="./index.html" class="logo__web"
               >Web<span class="logo__studio">Studio</span></a
             >
@@ -61,7 +61,7 @@
     </header>
     <main>
       <section class="mains">
-        <div class="container main">
+        <div class="main__container ">
           <h1 class="main__caption">
             Эффективные решения<br />для вашего бизнеса
           </h1>
@@ -72,30 +72,30 @@
       </section>
 
       <section class="profits">
-        <div class="container profit">
+        <div class="container">
           <ul class="profits__list">
-            <li class="profits__item icon-antenna">
+            <li class="profits__item icon__antenna">
               <h3 class="profits__title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="profits__text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="profits__item icon-clock">
+            <li class="profits__item icon__clock">
               <h3 class="profits__title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="about-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="profits__item icon-diagram">
+            <li class="profits__item icon__diagram">
               <h3 class="profits__title">ПЛАНИРОВАНИЕ</h3>
               <p class="profits__-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="profits__item icon-astronaut">
+            <li class="profits__item icon__astronaut">
               <h3 class="profits__title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="profits__text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -107,26 +107,26 @@
       </section>
 
       <section class="works">
-        <div class="container">
+        <div class="works__container">
           <h2 class="caption">Чем мы занимаемся</h2>
-          <ul class="works__foto">
+          <ul class="works__list">
             <li class="works__item">
               <img src="images/img1.jpg" width="370" alt="Фото1" />
-              <span class="works__caption">Десктопные приложения</span>
+              <span class="works__text">Десктопные приложения</span>
             </li>
             <li class="works__item">
               <img src="images/img2.jpg" width="370" alt="Фото2" />
-              <span class="works__caption">Мобильные приложения</span>
+              <span class="works__text">Мобильные приложения</span>
             </li>
             <li class="works__item">
               <img src="images/img3.jpg" width="370" alt="Фото3" />
-              <span class="works__caption">Дизайнерские решения</span>
+              <span class="works__text">Дизайнерские решения</span>
             </li>
           </ul>
         </div>
       </section>
       <section class="command">
-        <div class="container">
+        <div class="command__container">
           <h2 class="caption">Наша команда</h2>
           <ul class="command__list">
             <li class="command__foto">
@@ -139,9 +139,9 @@
               <div class="command__personal">
                 <p class="command__name">Игорь Демьяненко</p>
                 <p class="command__position">Product Designer</p>
-                <ul class="command__nets">
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                <ul class="nets">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
@@ -149,15 +149,15 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
@@ -165,8 +165,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
@@ -187,9 +187,9 @@
               <div class="command__personal">
                 <p class="command__name">Ольга Репина</p>
                 <p class="command__position">Frontend Developer</p>
-                <ul class="command__nets">
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                <ul class="nets">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
@@ -197,15 +197,15 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
@@ -213,8 +213,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
@@ -235,9 +235,9 @@
               <div class="command__personal">
                 <p class="command__name">Николай Тарасов</p>
                 <p class="command__position">Marketing</p>
-                <ul class="command__nets">
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                <ul class="nets">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
@@ -245,15 +245,15 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
@@ -261,8 +261,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
@@ -283,9 +283,9 @@
               <div class="command__personal">
                 <p class="command__name">Михаил Ермаков</p>
                 <p class="command__position">UI Designer</p>
-                <ul class="command__nets">
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                <ul class="nets">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
@@ -293,15 +293,15 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
@@ -309,8 +309,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="command__item">
-                    <a href="#" class="command__link">
+                  <li class="nets__item">
+                    <a href="#" class="nets__link">
                       <svg width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
@@ -325,7 +325,7 @@
         </div>
       </section>
       <section class="clients">
-        <div class="container">
+        <div class="clients__container">
           <h2 class="caption">Постоянные клиенты</h2>
           <ul class="clients__list">
             <li class="clients__item">
@@ -376,16 +376,16 @@
     </main>
     <footer>
       <div class="container">
-        <ul class="info__list">
+        <ul class="info">
           <li class="info__item">
-            <div class="logo-footer">
+            <div class="logo footer">
               <a href="./index.html" class="logo__web"
                 >Web<span class="logo__studio">Studio</span></a
               >
             </div>
             <address>
-              <ul class="contacts">
-                <li>
+              <ul >
+                <li class="info__list">
                   <a
                     href="https://goo.gl/maps/oR3F1YAG6LvCoMsa9"
                     target="_blank"
@@ -394,13 +394,13 @@
                     >г. Киев, пр-т Леси Украинки, 26</a
                   >
                 </li>
-                <li>
-                  <a href="mailto:info@devstudio.com" class="link__end"
+                <li class="info__list">
+                  <a href="mailto:info@devstudio.com" class="info__contact"
                     >info@devstudio.com</a
                   >
                 </li>
-                <li>
-                  <a href="tel:+380961111111" class="link__end"
+                <li class="info__list">
+                  <a href="tel:+380961111111" class="info__contact"
                     >+38 096 111 11 11</a
                   >
                 </li>
@@ -408,31 +408,31 @@
             </address>
           </li>
           <li class="info__item">
-            <h4 class="social__title">ПРИСОЕДИНЯЙТЕСЬ</h4>
-            <ul class="social__list">
-              <li class="social__item">
-                <a href="#" class="social__link">
+            <h4 class="title">ПРИСОЕДИНЯЙТЕСЬ</h4>
+            <ul class="nets">
+              <li class="nets__item">
+                <a href="#" class="nets__link">
                   <svg width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="social__item">
-                <a href="#" class="social__link">
+              <li class="nets__item">
+                <a href="#" class="nets__link">
                   <svg  width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="social__item">
-                <a href="#" class="social__link">
+              <li class="nets__item">
+                <a href="#" class="nets__link">
                   <svg width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="social__item">
-                <a href="#" class="social__link">
+              <li class="nets__item">
+                <a href="#" class="nets__link">
                   <svg width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
@@ -441,7 +441,7 @@
             </ul>
           </li>
           <li class="info__item">
-            <h4 class="social__title">Подпишитесь на рассылку</h4>
+            <h4 class="title">Подпишитесь на рассылку</h4>
             <form name="form-singht" class="singht">
               <input
                 class="form-input send"
@@ -450,7 +450,7 @@
                 placeholder="E-mail"
                 required
               />
-              <button type="submit" class="main-button">
+              <button type="submit" class="main__button">
                 <span class="singht-list"
                   >Подписаться
                   <svg class="icon-singht" width="24px" height="24px">
